<resources>
    <string name="app_name">SmartParkingFinder</string>
    <string name="login">Welcome to Smart Parking Finder System</string>
    <string name="login_btn">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_up_now">New User?<u>Click Here to Sign Up Now!</u> </string>
    <string name="car_register">Car Register</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="add_location">+</string>
    <string name="profile">Profile</string>
    <string name="location">Location:</string>
    <string name="parking_available">Parking Available:</string>
    <string name="enter_location_name">Enter location name:</string>
    <string name="enter_location_description">Enter Location Description:</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="delete_location">Delete Location</string>
    <string name="edit_location">Edit Location Details</string>
    <string name="edit_parking_layout">Edit Parking Layout</string>
    <string name="add_floor">Add Floor</string>
    <string name="delete">Delete</string>
    <string name="pillar_number">Pillar Number</string>
    <string name="new_fragment">New Fragment</string>
    <string name="addcard">addCard</string>
    <string name="settings">Settings</string>
    <string name="add_camera">Add Camera</string>
    <string name="edit">Edit</string>
    <string name="logout">LogOut</string>
    <string name="normal_parking">Normal Parking</string>
    <string name="disabled_parking">Disabled Parking</string>
    <string name="reserved_parking">Reserved Parking</string>
    <string name="family_parking">Family Parking</string>
    <string name="ladies_parking">Ladies Parking</string>
    <string name="not_available">Not Available</string>
    <string name="no_available_cameras">No Available Cameras.</string>
    <string name="all_parking_location">All Parking Location</string>
    <string name="recent_visited_places">Recent 5 Parking Location</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profiles">Profiles</string>
    <string name="car">Car</string>
    <string name="historyCar">Car :</string>
    <string name="select_a_camera_to_bind">Select A Camera To Bind</string>
    <string name="unbind">Unbind</string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="add_section">Add Section</string>
    <string name="delete_floor">Delete Floor</string>
    <string name="i_ve_parked_here">I\'ve Parked Here</string>
    <string name="no_plate">No.Plate :</string>
    <string name="model">Model :</string>
    <string name="register_car">Register Car</string>
    <string name="statistic">Statistic</string>
    <string name="camera">Camera</string>
    <string name="cameraListName">Camera :</string>
    <string name="approved_location">Approved Location</string>
    <string name="pending_location">Pending Location</string>
    <string name="admin_list">Admin List</string>
    <string name="upload_image">Upload Image</string>
    <string name="save_details">Save Details</string>
    <string name="upload_parking_floor_plan_for_easier_navigation"><u>Upload Parking Floor Plan For Easier Navigation</u></string>
    <string name="preview_and_save_images"><u>Preview and Save Images</u></string>
    <string name="more_info"><u>More Info.</u></string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="press_in_the_parking_section_to_save_where_you_parked">Press (_____) in the Parking Section to Save Where You Parked.</string>
    <string name="choose_parking_type">Choose Parking Type:</string>

</resources>