<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/idRLBSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/idTVLocation"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:padding="4dp"
        android:paddingStart="20dp"
        android:text="@string/location"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/idIVdeleteButton"
        android:layout_width="34dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="296dp"
        android:layout_toRightOf="@+id/idTVLocation"
        android:contentDescription="@string/delete"
        android:src="@drawable/ic_baseline_delete_24" />

    <ImageView
        android:id="@+id/idIVLocation"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/idTVLocation"
        android:layout_centerVertical="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:padding="4dp"
        android:src="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/idTVDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/black"
        android:layout_margin="4dp"
        android:layout_below="@+id/idTVLocation"
        android:layout_toRightOf="@id/idIVLocation"
        android:padding="3dp" />

    <TextView
        android:id="@+id/idTVParkingAvailable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idTVDescription"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toRightOf="@id/idIVLocation"
        android:padding="3dp"
        android:text="@string/parking_available"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_below="@id/idIVLocation">

        <Button
            android:id="@+id/idBtnEditLocationDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/edit_location"
            android:textAllCaps="false"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/idBtnEditParkingLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:text="@string/edit_parking_layout"
            android:textAllCaps="false"
            android:textColor="@color/white"/>


    </LinearLayout>

</RelativeLayout>