<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edt_location_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="51dp"
        android:hint="@string/enter_location_name" />

    <EditText
        android:layout_width="410dp"
        android:layout_height="108dp"
        android:layout_below="@+id/edt_location_name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="23dp"
        android:hint="@string/enter_location_description"
        android:id="@+id/edt_location_desc"
        />

    <EditText
        android:id="@+id/edt_parking_space"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edt_location_desc"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="17dp"
        android:hint="Enter a number"
        android:inputType="number" />

    <Button
        android:id="@+id/btn_save_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="156dp"
        android:layout_marginTop="354dp"
        android:text="@string/save" />


</RelativeLayout>