<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".Login">

    <!-- CardView as the white box background -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_centerInParent="true"
        android:background="@drawable/gradient_yellow"
        android:layout_marginRight="30dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/gradient_yellow"

            android:orientation="vertical">

            <!-- Your existing components here -->

            <ImageView
                android:layout_width="88dp"
                android:layout_height="113dp"
                app:srcCompat="@drawable/icon_parkng" />

            <TextView
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/txtEdit_Email"
                android:layout_width="300dp"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:text="user@gmail.com"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:background="@color/cardColor"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="10dp"
                />


            <EditText
                android:id="@+id/txtEdit_Password"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:background="@color/cardColor"
                android:ems="10"
                android:hint="@string/password"
                android:text="123456"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="10dp"
                />

            <TextView
                android:id="@+id/txt_ForgotPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="2dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="20dp"
                android:gravity="right"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/custom_blue"
                android:text="@string/forgot_password" />

            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="20dp"
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="@string/login_btn"
                app:cornerRadius="8dp"
                android:background="@drawable/gradient_blue"
                app:layout_constraintTop_toBottomOf="@id/txtEdit_password"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/sign_up_now"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/custom_blue"
                android:textSize="20dp"
                />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
