<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestingTab">
    <include layout="@layout/toolbar"/>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="61dp"
        app:tabMode="scrollable" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager_test"
        android:layout_width="match_parent"
        android:layout_height="553dp"
        android:layout_above="@+id/addTabButton"
        android:layout_below="@+id/tabLayout_test"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tabLayout_test"
        android:id="@+id/txt_nothing"
        android:gravity="center"
        android:fontFamily="sans-serif-medium"
        android:textSize="20sp"
        android:text="Nothing to Show. Add Floor to Start Manage Parking Layout." />
    <Button
        android:id="@+id/addTabButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cancel_btn"
        android:text="@string/add_floor"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/addParkingBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@drawable/cancel_btn"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/addTabButton"
        android:text="@string/add_section" />
    <Button
        android:id="@+id/deleteTabButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/addTabButton"
        android:layout_alignParentBottom="true"
        android:background="@drawable/cancel_btn"
        android:layout_alignParentStart="true"
        android:text="@string/delete_floor" />




</RelativeLayout>