<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar"/>

        <EditText
            android:id="@+id/edt_location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="88dp"
            android:hint="@string/enter_location_name" />

        <EditText
            android:layout_width="410dp"
            android:layout_height="108dp"
            android:layout_below="@+id/edt_location_name"
            android:layout_alignParentStart="true"
            android:layout_marginStart="1dp"
            android:layout_marginTop="23dp"
            android:hint="@string/enter_location_description"
            android:id="@+id/edt_location_desc"
            />

        <ImageView
            android:id="@+id/idParkingImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_below="@+id/edt_location_desc"
            android:layout_alignParentStart="true"
            android:layout_marginStart="132dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="37dp"
            android:scaleType="centerCrop" />

        <Button
            android:id="@+id/button_choose_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="478dp"
            android:backgroundTint="@color/teal_200"
            android:text="Choose File" />

        <Button
            android:id="@+id/btn_save_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button_choose_image"
            android:layout_alignParentStart="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="164dp"
            android:layout_marginTop="0dp"
            android:text="@string/save" />
    </RelativeLayout>

</ScrollView>